     instead of a normal terrain.
 * sounds and music
   * new or improved sounds: bat hit
 * map editor:
   * the grid is scaled properly again and no longer shown in the offmap area
   * the resize option can now also use the surrounding tiles to expand the
     map in a smart way, this is the default.
   * the map editor can now also shift the origin of the map when resizing.
 * user interface:
   * Enable "Save Game" and "View Chat Log" menu entries in replay mode.
   * Add an additional line below the minimap in the "Multiplayer->Create game"
     screen that displays the size of the selected map. (patch #776 by uso)
   * Add a tooltip with the experience modifier for the units XP display.
   * add an empty attack icon in attack dialog when needed (this also removes
     an error message, bug #9570)
   * better "choose attack direction using the last highlighted hex" on pack
     of units (bug #9649)
   * attack/move cursors and attack direction indicator are not used when
     observing (bug #9610)
   * 'help' and 'more' button in the title screen now also have a tooltip
     (bug #9618 patch #790)
   * added a hotkey for clearing the chat messages (patch #770)
   * fixed incorrect displayed reachable zone when moving next to an enemy
     in special ZoC cases (skirmish or lvl0)
   * Remove the "black stripes" of the enemy that we want to attack.
   * in tiny-gui, now the movement hint also displays the terrain defense.
   * the numbers of "show enemy moves" are now on top of fog and doesn't mix
     with those of the movement hint
   * display resistances against visible enemy weapons in the HP tooltip
 * WML engine:
   * now [base_unit]id= inside [unit] can extend upon existing unit types
   * new tag [filter_radius] to allow greater control over radius expansion
     when using the standard location filter
   * fix a bug where containers could only be stored at the top-level
   * fix a bug where both x and y had to be specified in location filters