@@ -60,6 +60,8 @@ Version 1.3.6+svn:
    * the resize option can now also use the surrounding tiles to expand the
      map in a smart way, this is the default.
    * the map editor can now also shift the origin of the map when resizing.
+   * tiles can now have their own image in the editor, defaults to the minimap
+     image. Also added some placeholder art.
  * user interface:
    * Enable "Save Game" and "View Chat Log" menu entries in replay mode.
    * Add an additional line below the minimap in the "Multiplayer->Create game"
